--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <a href="#" target="_blank">
           <img src="images/douche4_450.jpg" alt="Douche">
           <h3>Douche</h3>
-          <p>(2010, 17 min.)</p>
+          <p>2010, 17 min.</p>
         </a>
       </div>
 
@@ -305,7 +305,7 @@
 
     <!-- About Me Section -->
     <section class="about-me">
-      <p>Ryan explores the world through filmmaking.</p>
+      <p>Ryan is an explorer of the unified field, via filmmaking.</p>
       <img src="images/ryan_image1.jpg" alt="Ryan's Photo">
     </section>
   </main>
