--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <a href="https://www.youtube.com/watch?v=70JcWRDsGTg" target="_blank">
           <img src="images/smile2_450.jpg" alt="Smile">
           <h3>Smile</h3>
-          <p>(2021, 2 min.)</p>
+          <p>2021, 2 min.</p>
         </a>
       </div>
 
@@ -182,7 +182,7 @@
         <a href="https://www.youtube.com/watch?v=Lu3SOrsxiqc" target="_blank">
           <img src="images/Hi_450.jpg" alt="Hi!">
           <h3>Hi!</h3>
-          <p>(2021, 3 min.)</p>
+          <p>2021, 3 min.</p>
         </a>
       </div>
 
@@ -191,7 +191,7 @@
         <a href="https://www.youtube.com/watch?v=VueEcHNt85I" target="_blank">
           <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
           <h3>Travel Time with Tami</h3>
-          <p>(2020, 32 min.)</p>
+          <p>2020, 32 min.</p>
         </a>
       </div>
 
@@ -200,7 +200,7 @@
         <a href="https://www.youtube.com/watch?v=q7kA9YIudlU" target="_blank">
           <img src="images/AsThyMothDothRothV1_450.jpg" alt="As Thy Moth Doth Wroth">
           <h3>As Thy Moth Doth Wroth</h3>
-          <p>(2019, 8 min.)</p>
+          <p>2019, 8 min.</p>
         </a>
       </div>
 
@@ -217,7 +217,7 @@
         <a href="https://www.youtube.com/watch?v=yP5MZxgJCdE" target="_blank">
           <img src="images/chebo_450.jpg" alt="The Chebo">
           <h3>The Chebo</h3>
-          <p>(2017, 9 min.)</p>
+          <p>2017, 9 min.</p>
         </a>
       </div>
 
@@ -226,7 +226,7 @@
         <a href="https://drive.google.com/file/d/1l55GNmGvI_sZ0RU_dyRUts0KkMN1Ow_T/view?usp=sharing" target="_blank">
           <img src="images/shelter_450.jpg" alt="Shelter from the Storm">
           <h3>Shelter from the Storm</h3>
-          <p>(2015, 11 min.)</p>
+          <p>2015, 11 min.</p>
         </a>
       </div>
 
@@ -235,7 +235,7 @@
         <a href="#" target="_blank">
           <img src="images/parmsonarooftop_450.jpg" alt="The Parmesans: Live on a Rooftop in Chinatown">
           <h3>The Parmesans: Live on a Rooftop in Chinatown</h3>
-          <p>(2015, 15 min.)</p>
+          <p>2015, 15 min.</p>
         </a>
       </div>
 
@@ -244,7 +244,7 @@
         <a href="#" target="_blank">
           <img src="images/jujaje2_450.jpg" alt="JuJaJe">
           <h3>JuJaJe</h3>
-          <p>(2013, 3 min.)</p>
+          <p>2013, 3 min.</p>
         </a>
       </div>
 
@@ -253,7 +253,7 @@
         <a href="#" target="_blank">
           <img src="images/lastyear_450.jpg" alt="Last Year">
           <h3>Last Year</h3>
-          <p>(2012, 13 min.)</p>
+          <p>2012, 13 min.</p>
         </a>
       </div>
 
@@ -262,7 +262,7 @@
         <a href="https://www.youtube.com/watch?v=Omw2YGHKnY8" target="_blank">
           <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
           <h3>Lovebound: Love Abounds</h3>
-          <p>(2012, 21 min.)</p>
+          <p>2012, 21 min.</p>
         </a>
       </div>
 
@@ -271,7 +271,7 @@
         <a href="https://www.youtube.com/watch?v=9hxcuU-y_MQ" target="_blank">
           <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
           <h3>Forest Falls</h3>
-          <p>(2011, 27 min.)</p>
+          <p>2011, 27 min.</p>
         </a>
       </div>
 
@@ -280,7 +280,7 @@
         <a href="https://www.youtube.com/watch?v=2CLIyoXyVqk" target="_blank">
           <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
           <h3>The Kristy Corollary</h3>
-          <p>(2011, 17 min.)</p>
+          <p>2011, 17 min.</p>
         </a>
       </div>
 
@@ -298,7 +298,7 @@
         <a href="https://vimeo.com/19917156" target="_blank">
           <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
           <h3>Swimming Time with Tami</h3>
-          <p>(2007, 8 min.)</p>
+          <p>2007, 8 min.</p>
         </a>
       </div>
     </section>
