--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     .portfolio-item p {
       margin: 5px 0 0 0;
       font-style: normal; 
+      font-size: 14px; /* Slightly smaller than the title */
     }
 
     .portfolio-item a {
