--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
       <!-- 11) The Parmesans: Live on a Rooftop in Chinatown (2015, 15 min.) -->
       <div class="portfolio-item">
-        <a href="#" target="_blank">
+        <a href="https://www.youtube.com/watch?v=LKMXwF0uERo" target="_blank">
           <img src="images/parmsonarooftop_450.jpg" alt="The Parmesans: Live on a Rooftop in Chinatown">
           <h3>The Parmesans: Live on a Rooftop in Chinatown</h3>
           <p>2015, 15 min.</p>
@@ -249,7 +249,7 @@
 
       <!-- 12) JuJaJe (2013, 3 min.) -->
       <div class="portfolio-item">
-        <a href="#" target="_blank">
+        <a href="https://www.youtube.com/watch?v=0Srcmhe1ogg" target="_blank">
           <img src="images/jujaje2_450.jpg" alt="JuJaJe">
           <h3>JuJaJe</h3>
           <p>2013, 3 min.</p>
@@ -258,7 +258,7 @@
 
       <!-- 13) Last Year (2012, 13 min.) -->
       <div class="portfolio-item">
-        <a href="#" target="_blank">
+        <a href="https://www.youtube.com/watch?v=Y_OMDv_EWto" target="_blank">
           <img src="images/lastyear_450.jpg" alt="Last Year">
           <h3>Last Year</h3>
           <p>2012, 13 min.</p>
@@ -294,7 +294,7 @@
 
       <!-- 17) Douche (2010, 17 min.) -->
       <div class="portfolio-item">
-        <a href="#" target="_blank">
+        <a href="https://vimeo.com/22662844" target="_blank">
           <img src="images/douche4_450.jpg" alt="Douche">
           <h3>Douche</h3>
           <p>2010, 17 min.</p>
