--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <section class="portfolio">
   <!-- 1) Have You Seen Me? (in production) -->
   <div class="portfolio-item">
+    <a href="https://www.haveyouseenmemovie.com" target="_blank">
     <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
     <h3>Have You Seen Me? (in production)</h3>
     <!-- No year/runtime -->
